src/objects/QPMS__Product__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CR_Status__c</fullName>
        <formula>if(TEXT(QPMS__Product_Task_Status__c) == &apos;Closed&apos;,$Label.qpms__closed,if(TEXT(QPMS__Product_Task_Status__c) == &apos;Completed&apos;,$Label.qpms__completed,$Label.qpms__lt_all_void))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Commodity_Code__c</fullName>
        <label>Commodity Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Distributor__c</fullName>
        <label>Distributor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Is_Created_From_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Created From CR</description>
        <label>Is Created From CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer / Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Part_Classification__c</fullName>
        <label>Part Classification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Part_Quality__c</fullName>
        <label>Part Quality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Part_Revision__c</fullName>
        <label>Part Revision</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Part_Vault__c</fullName>
        <label>Part Vault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Code__c</fullName>
        <label>Product Code</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Number__c</fullName>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Task_Status__c</fullName>
        <label>Product Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Product_Task__c</fullName>
        <description>Product Task</description>
        <label>Product Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <formula>Name + IF(ISBLANK(QPMS__Product_Number__c), &apos;&apos;, &apos;(&apos; + QPMS__Product_Number__c + &apos;)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Level__c</fullName>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
                <value>
                    <fullName>val3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to sample plan</description>
        <label>Sampling Plan</label>
        <referenceTo>QPMS__Sampling_Plan__c</referenceTo>
        <relationshipLabel>Product Family</relationshipLabel>
        <relationshipName>Product_Family</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Under Change</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finished Product</fullName>
                </value>
                <value>
                    <fullName>Part</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>GAL</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Family</label>
    <listViews>
        <fullName>QPMS__All_Products</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Product_Code__c</columns>
        <columns>QPMS__Product_Number__c</columns>
        <columns>QPMS__Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Family</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Component</fullName>
        <active>true</active>
        <label>Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Equipment</fullName>
        <active>true</active>
        <label>Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Finished_Product</fullName>
        <active>true</active>
        <label>Finished Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Part</fullName>
        <active>true</active>
        <label>Part</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>QPMS__Product_code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(  QPMS__Is_Created_From_CR__c =true ),
ISCHANGED( QPMS__Product_Code__c ))</errorConditionFormula>
        <errorMessage>Product code should not be changed once product created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Product_code_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
( QPMS__Is_Created_From_CR__c =false ),
ISBLANK( QPMS__Product_Code__c ))</errorConditionFormula>
        <errorMessage>Product code  is required</errorMessage>
    </validationRules>
</CustomObject>